Grammar/bin/RbParser.jj
PARSER_BEGIN(RbParser)

import java.io.StringReader;
import java.io.InputStream;
import java.io.Reader;
import metrics.MetricsCounter;

public class RbParser {

	private static Integer classCounter = 0;

	// Metrics	
	private static int amountOfStatements = 0;

	public MetricsCounter countMetrics() {
		MetricsCounter metricsCounter = new MetricsCounter();
		try {
			clazz();
		}
        catch(Exception e) {
              e.printStackTrace();
        }
		metricsCounter.getMetrics()[0] = classCounter.toString();
		return metricsCounter;
	}

	/*  
	 * A String based constructor for ease of use
	 */
	public RbParser(String s) {
		this((Reader)(new StringReader(s))); 
	}
}

PARSER_END(RbParser)

SKIP : {" " | "\t" }

TOKEN : { <T : "\n" | ";"> }
//TOKEN : { <underscore : "_"> }
//TOKEN : { <quote : "\""> }
//TOKEN : { <lparen : "("> }
//TOKEN : { <rparen : ")"> }
//TOKEN : { <plus : "+"> }
//TOKEN : { <minus : "-"> }
//TOKEN : { <equal : "="> }
//TOKEN : { <dot : "."> }
TOKEN : { <clazz : "class"> }

//TOKEN : { <symbol : "|" | " " | "!" | "#" | "$" | "%" | "&" | "*" | ","
//					| "-" | "/" | ":" | ";" | "<" | ">" | "?" | "@" | "[" | "\\" | "]"
//					| "^" | "`" | "{" | "|" | "}" | "~"> }

TOKEN : { <symbol 	: "|" | " " | "-" | "!" | "#" | "$" | "%" | "&" | "(" | ")" | "*" | "+" | ","
					| "-" | "." | "/" | ":" | "<" | "=" | ">" | "?" | "@" | "[" | "\\" | "]"
					| "^" | "_" | "`" | "{" | "|" | "}" | "~"> }

					
TOKEN : { <letter : ["A"-"Z"] | ["a"-"z"]> }
TOKEN : { <digit : ["0"-"9"]> }
TOKEN : { <op_asgn : "+=" |"-=" |"*=" |"/=" |"%=" |"**=" |"&=" |"|=" |"^=" |"<<=" |">>=" |"&&=" |"||="> }

void any_char() :
{}
{
	<letter> | <digit> | <symbol> 
}
   
//void program() :
//{
//	System.out.println("program()");
//}
//{
//	identifier() expr() ((<T>)+ (program() | <EOF>))* <EOF>
//}

//void string() :
//{
//	System.out.println("string()");
//}
//{
//	<quote> (letter() | digit() | symbol())* <quote>
//}
//
//void num() :
//{
//	System.out.println("num()");
//}
//{
//	(<digit>)+ [<dot> (<digit>)*]
//}
//
//void letter() :
//{
//	System.out.println("letter()");
//}
//{
//	<letter>
//}
//
//void op() :
//{
//	System.out.println("op()");
//}
//{
//	(<op_asgn> | <plus> | <minus> | <equal>) 
//}
//
//void digit() :
//{
//	System.out.println("digit()");
//}
//{
//	<digit>
//}
//
//void symbol() :
//{
//	System.out.println("symbol()");
//}
//{
//	(<symbol> | <lparen> | <rparen> | <underscore> | <dot> | <plus> | <minus> | <equal>)
//}
//
//void identifier() :
//{
//	System.out.println("identifier()");
//}
//{
//	(letter() | <underscore>) (letter() | <underscore> | digit())* 
//}
//
//void expr() :
//{
//	System.out.println("expr()");
//}
//{
//	identifier() [expr2()]
//	| string() [expr2()]
//	| num() [expr2()]
//	| <lparen> expr() <rparen> [expr2()]
//}
//
//void expr2() :
//{
//	System.out.println("");
//}
//{
//	op() expr() [expr2()]
//}

void clazz() :
{
	classCounter++;
}
{
	(any_char())* <clazz> (any_char())*
}
