Grammar/src/RbParser.java
/* Generated By:JavaCC: Do not edit this line. RbParser.java */
import java.io.StringReader;
import java.io.InputStream;
import java.io.Reader;
import metrics.MetricsCounter;

public class RbParser implements RbParserConstants {

        private static Integer classCounter = 0;

        // Metrics	
        private static int amountOfStatements = 0;

        public MetricsCounter countMetrics() {
                MetricsCounter metricsCounter = new MetricsCounter();
                try {
                        clazz();
                }
        catch(Exception e) {
              e.printStackTrace();
        }
                metricsCounter.getMetrics()[0] = classCounter.toString();
                return metricsCounter;
        }

        /*  
	 * A String based constructor for ease of use
	 */
        public RbParser(String s) {
                this((Reader)(new StringReader(s)));
        }

  static final public void any_char() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case letter:
      jj_consume_token(letter);
      break;
    case digit:
      jj_consume_token(digit);
      break;
    case symbol:
      jj_consume_token(symbol);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//void program() :
//{
//	System.out.println("program()");
//}
//{
//	identifier() expr() ((<T>)+ (program() | <EOF>))* <EOF>
//}

//void string() :
//{
//	System.out.println("string()");
//}
//{
//	<quote> (letter() | digit() | symbol())* <quote>
//}
//
//void num() :
//{
//	System.out.println("num()");
//}
//{
//	(<digit>)+ [<dot> (<digit>)*]
//}
//
//void letter() :
//{
//	System.out.println("letter()");
//}
//{
//	<letter>
//}
//
//void op() :
//{
//	System.out.println("op()");
//}
//{
//	(<op_asgn> | <plus> | <minus> | <equal>) 
//}
//
//void digit() :
//{
//	System.out.println("digit()");
//}
//{
//	<digit>
//}
//
//void symbol() :
//{
//	System.out.println("symbol()");
//}
//{
//	(<symbol> | <lparen> | <rparen> | <underscore> | <dot> | <plus> | <minus> | <equal>)
//}
//
//void identifier() :
//{
//	System.out.println("identifier()");
//}
//{
//	(letter() | <underscore>) (letter() | <underscore> | digit())* 
//}
//
//void expr() :
//{
//	System.out.println("expr()");
//}
//{
//	identifier() [expr2()]
//	| string() [expr2()]
//	| num() [expr2()]
//	| <lparen> expr() <rparen> [expr2()]
//}
//
//void expr2() :
//{
//	System.out.println("");
//}
//{
//	op() expr() [expr2()]
//}
  static final public void clazz() throws ParseException {
        classCounter++;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case symbol:
      case letter:
      case digit:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      any_char();
    }
    jj_consume_token(clazz);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case symbol:
      case letter:
      case digit:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      any_char();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public RbParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xe0,0xe0,0xe0,};
   }

  /** Constructor with InputStream. */
  public RbParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public RbParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RbParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public RbParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new RbParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public RbParser(RbParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(RbParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[9];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 9; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
